# onebox

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  onebox.http  prepush.sh  pyproject.toml  requirements-dev.txt  requirements.txt
app/: .env.example  config.py  db.py  main.py
app/api/: auth.py  users.py
app/crud/: crud_public_user.py  crud_user.py  crud_users.py
app/models/: models.py  shared_models.py
app/service/: scheduler_middleware.py  tenants.py
migrations/: env.py
migrations/versions/: 2023_10_13_1500-cdef3b7288aa_add_public_tables.py  2023_10_13_1500-f77d8db8fbd7_add_user_tables.py
