[tool.poetry]
name = "onebox"
version = "0.1.0"
description = ""
authors = ["mgur <mgur@pop-os.localdomain>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.103" }
SQLAlchemy = "^2.0.21"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
psycopg = { extras = ["binary"], version = "^3.1.12" }
loguru = "^0.7.0"
passlib = { extras = ["argon2"], version = "^1.7.4" }
APScheduler = "4.0.0a3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
